--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,8 +98,16 @@
       <property name="styleSheet">
        <string notr="true">background: #ffffff;</string>
       </property>
+      <property name="sceneRect">
+       <rectf>
+        <x>0.000000000000000</x>
+        <y>0.000000000000000</y>
+        <width>0.000000000000000</width>
+        <height>0.000000000000000</height>
+       </rectf>
+      </property>
       <property name="alignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
