--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -107,7 +107,7 @@
        </rectf>
       </property>
       <property name="alignment">
-       <set>Qt::AlignCenter</set>
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
