--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -132,6 +132,40 @@
       </item>
      </layout>
     </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="displayScaleLabel">
+        <property name="text">
+         <string>Display Scale:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSlider" name="displayScaleInput">
+        <property name="minimum">
+         <number>5</number>
+        </property>
+        <property name="maximum">
+         <number>25</number>
+        </property>
+        <property name="value">
+         <number>10</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="showRoadDirectionsInput">
+        <property name="text">
+         <string>Show Road Directions</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
