slider value displays

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -59,6 +59,19 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="updateIntervalValueLabel">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLabel" name="updateTrafficDensityLabel">
         <property name="text">
          <string>Input Density:</string>
@@ -81,6 +94,28 @@
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="tickPosition">
+         <enum>QSlider::NoTicks</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="densityInputValueLabel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
@@ -155,6 +190,12 @@
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
+        <property name="invertedAppearance">
+         <bool>false</bool>
+        </property>
+        <property name="invertedControls">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item>
@@ -174,7 +215,7 @@
      <x>0</x>
      <y>0</y>
      <width>713</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
